<resources>
    <string name="app_name">UserDetailSample</string>

    <string-array name="state_names">
        <item>Karnataka</item>
        <item>Tamil Nadu</item>
        <item>Kerala</item>
        <item>Andhra Pradesh</item>
        <item>Goa</item>
    </string-array>

    <string-array name="yop">
        <item>2018-19</item>
        <item>2019-20</item>
        <item>2020-21</item>
        <item>2021-22</item>
        <item>2022-23</item>
    </string-array>

    <string-array name="graduation_array">
        <item>B.Com</item>
        <item>B.Sc</item>
        <item>B.Tech</item>
        <item>M.Com</item>
        <item>M.Sc</item>
        <item>M.Tech</item>
        <item>Ph.D</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_details">User Details</string>
    <string name="enter_the_marks_in_percentage">Enter the marks in percentage</string>
    <string name="yes">Yes</string>
    <string name="state">State</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="enter_the_contact_number">Enter the contact number</string>
    <string name="graduation">Graduation</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="enter_the_last_name">Enter the last name</string>
    <string name="enter_the_middle_name">Enter the middle name</string>
    <string name="enter_the_first_name">Enter the first name</string>
    <string name="no">No</string>
    <string name="willing_to_relocate">Willing to relocate?</string>
    <string name="year_of_pass_out">Year of pass - out</string>
    <string name="yearOfPassOut">Year of Pass - out</string>
    <string name="save">Save</string>
    <string name="enter_the_age">Enter the age</string>
    <string name="prefix">+91</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="contact_number">Contact number</string>
    <string name="email">Email</string>
    <string name="marks_in">Marks in %</string>
</resources>

