<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/purple1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_details"
            android:layout_marginBottom="@dimen/user_details_text_margin_top"
            android:textSize="@dimen/user_details_text_view"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/user_details_text_margin_start"
            android:layout_marginTop="@dimen/user_details_text_margin_top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500sp"
            android:layout_marginTop="@dimen/first_name_linear_layout_margin_top"
            android:background="@drawable/textviewbckg"
            android:elevation="@dimen/ll_elevation"
            android:orientation="vertical">


                


                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ll_marginTop">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/txtViewFirstName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/first_name_edit_text"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:autofillHints=""
                                android:drawableStart="@drawable/ic_baseline_person"
                                android:drawablePadding="@dimen/drawable_padding"
                                android:hint="@string/enter_the_first_name"
                                android:inputType="text"
                                android:textColorHint="#757575"
                                android:textSize="@dimen/text_size"
                                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />


                            <EditText
                                android:id="@+id/txtViewMiddleName"
                                android:layout_width="match_parent"
                                android:paddingTop="@dimen/textView_margin_top"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:autofillHints=""
                                android:drawableStart="@drawable/ic_baseline_person"
                                android:drawablePadding="@dimen/drawable_padding"
                                android:hint="@string/enter_the_middle_name"
                                android:inputType="text"
                                android:textColorHint="#757575"
                                android:textSize="@dimen/text_size"
                                tools:ignore="DuplicateSpeakableTextCheck" />

                            <EditText
                                android:id="@+id/txtViewLastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:paddingTop="@dimen/textView_margin_top"
                                android:autofillHints=""
                                android:drawableStart="@drawable/ic_baseline_person"
                                android:drawablePadding="@dimen/drawable_padding"
                                android:hint="@string/enter_the_last_name"
                                android:inputType="text"
                                android:textSize="@dimen/text_size"
                                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                            <EditText
                                android:id="@+id/age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/black"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:hint="@string/enter_the_age"
                                android:textSize="@dimen/text_size"
                                android:inputType="number"
                                tools:ignore="TouchTargetSizeCheck" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:text="@string/gender"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size" />

                            <RadioGroup
                                android:id="@+id/radioGroupGender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginEnd="@dimen/textView_margin_end">

                                <RadioButton
                                    android:id="@+id/radioBtnMale"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/male"
                                    android:textColor="@color/black" />

                                <RadioButton
                                    android:id="@+id/radioBtnFemale"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/female"
                                    android:textColor="@color/black" />
                            </RadioGroup>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:text="@string/graduation"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size" />

                            <Spinner
                                android:id="@+id/coursesspinner"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/spinner_heightt"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/spinner_margin_top"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:layout_marginBottom="@dimen/spinner_margin_bottom"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="SpeakableTextPresentCheck" />

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:hint="@string/enter_the_contact_number"
                                android:textColor="@color/black"
                                app:prefixText="@string/prefix"
                                >

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/contactNum"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/textView_margin_top"
                                    android:drawableStart="@drawable/ic_baseline_local_phone"
                                    android:drawablePadding="@dimen/drawable_padding"
                                    android:inputType="phone"
                                    tools:ignore="TextContrastCheck" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:hint="@string/enter_the_email"
                                android:textColor="@color/black">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/mailId"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_mail"
                                    android:drawablePadding="10dp"
                                    android:textColorHint="#757575"
                                    tools:ignore="TextContrastCheck"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:layout_marginBottom="@dimen/state_margin_bottom"
                                android:textSize="@dimen/text_size">

                                <AutoCompleteTextView
                                    android:id="@+id/autoCompleteTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:width="@dimen/autocompletetextview_width"
                                    android:inputType="none"
                                    android:text="@string/state"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/text_size"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <EditText
                                android:id="@+id/marksPer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:autofillHints=""
                                android:hint="@string/enter_the_marks_in_percentage"
                                android:inputType="number"
                                android:textSize="@dimen/text_size"
                                android:textColor="@color/black"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:layout_marginBottom="@dimen/willing_to_relocate_margin_bottom"
                                android:text="@string/willing_to_relocate"
                                android:textColor="@color/black"/>

                            <Switch
                                android:id="@+id/relocateSwitch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/textView_margin_start"/>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/textView_margin_start"
                                android:layout_marginTop="@dimen/textView_margin_top"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:layout_marginBottom="@dimen/willing_to_relocate_margin_bottom"
                                android:textSize="@dimen/text_size">

                                <AutoCompleteTextView
                                    android:id="@+id/autoCompleteTextview_Yop"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:width="@dimen/autocompletetextview_width"
                                    android:inputType="none"
                                    android:text="@string/yearOfPassOut"
                                    android:textSize="@dimen/text_size"
                                    android:textColor="@color/black"/>

                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/saveBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/button_margin_start"
                                android:layout_marginEnd="@dimen/textView_margin_end"
                                android:text="@string/save"
                                android:layout_marginTop="@dimen/button_margin_top"
                                android:layout_marginBottom="@dimen/button_margin_bottom"/>

                        </LinearLayout>



            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>