<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity"
    android:orientation="horizontal"
    android:background="@drawable/purple1">

    <LinearLayout
        android:layout_width="@dimen/ud_ll_width"
        android:layout_marginStart="@dimen/ud_ll_margin_start"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_name_linear_layout_margin_top"
        android:background="@drawable/textviewbckg"
        android:elevation="@dimen/ll_elevation"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewFN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/gender"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewGen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/age"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/graduation"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewGrad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/contact_number"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewCon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/email"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/state"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/marks_in"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewMarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/willing_to_relocate"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewRelocate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/year_of_pass_out"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"/>

            <TextView
                android:id="@+id/txtViewYearOfPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="@dimen/textView_margin_start"
                android:layout_marginEnd="@dimen/textView_margin_end"
                android:layout_marginTop="@dimen/textView_margin_top"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>